Add 404.html badapple.html
404.html
badapple.html

--- a/404.html
+++ b/404.html
@@ -63,7 +63,7 @@
       <nav>
         <span
           id="brand"
-          class="circleScaleBtn2 logo"
+          class="circleScaleBtn2 logo user-select-none"
           onclick="location.href='index.html'"
         >
           <img
@@ -80,7 +80,7 @@
       <!--------------- hero section starts here --------------->
 
       <div rel="preload" as="image" class="bgimg404 wow fadeInUp">
-        <div class="hero">
+        <div class="hero user-select-none">
           <div class="header">
             <h1 class="wow fadeInUp" data-wow-delay="0.1s">
               <span class="rainbowText">404 Page not found</span>
