--- a/badapple.html
+++ b/badapple.html
@@ -88,7 +88,7 @@
       <nav>
         <span
           id="brand"
-          class="circleScaleBtn2 logo"
+          class="circleScaleBtn2 logo user-select-none"
           onclick="location.href='index.html'"
         >
           <img
@@ -107,7 +107,7 @@
         <source src="video/badapple.mp4" type="video/mp4">
         Your browser does not support HTML5 video.
       </video>
-      <div class="container centered">
+      <div class="container centered user-select-none">
       <div class="wow bounceIn">
           <h1>🍎</h1>
           <h1 class="rainbowText"> Bad Apple!!</h1>
