--- a/common/footer.html
+++ b/common/footer.html
@@ -8,18 +8,23 @@
       </div>
     </div>
 
-    <br />
+    <br>
 
     <div class="hr">
       <div class="row"></div>
     </div>
 
-    <br />
+    <br>
 
     <div class="info">
       <div class="row">
         <div class="col-md-4" id="personal">
           <h5 class="wow fadeInUp footer" data-wow-delay="0.1s">
+            <span
+              id="brand"
+              class="logo wow fadeInDown data-wow-delay="0.6s"
+              onclick="location.href='badapple.html'"
+            >
             <img
               rel="preload"
               as="image"
@@ -34,6 +39,7 @@
               height="55"
               src="img/TNIIcon.png"
             />
+            </span>
           </h5>
           <p
             class="wow fadeInUp list badge badge-pill circleScaleBtn2"
