--- a/aboutus.html
+++ b/aboutus.html
@@ -99,18 +99,18 @@
               </p>
 
               <div
-              class="containers wow fadeInUp border border-light"
-              data-wow-delay="0.4s" id="containers">
+              class="containers border border-light wow fadeInUp"
+              data-wow-delay="0.6s" id="containers">
               
               <div id="carouselA" class="carousel slide" data-ride="carousel">
-                <ol class="carousel-indicators">
+                <ol class="carousel-indicators wow fadeInUp" data-wow-delay="0.6s">
                   <li data-target="#carouselA" data-slide-to="0" class="active"></li>
                   <li data-target="#carouselA" data-slide-to="1"></li>
                   <li data-target="#carouselA" data-slide-to="2"></li>
                   <li data-target="#carouselA" data-slide-to="3"></li>
                   <li data-target="#carouselA" data-slide-to="4"></li>
                 </ol>
-                <div class="carousel-inner">
+                <div class="carousel-inner wow fadeInUp">
                   <div class="carousel-item active">
                     <img class="d-block w-100" src="img/CyberPic_coop.png" alt="1">
                    
@@ -128,11 +128,11 @@
                     <img class="d-block w-100" src="img/tni.jpg" alt="5">
                   </div>
                 </div>
-                <a class="carousel-control-prev" href="#carouselA" role="button" data-slide="prev">
+                <a class="carousel-control-prev wow fadeInUp" data-wow-delay="0.6s" href="#carouselA" role="button" data-slide="prev">
                   <span class="fa-solid fa-backward" aria-hidden="true"></span>
                   <span class="sr-only">Previous</span>
                 </a>
-                <a class="carousel-control-next" href="#carouselA" role="button" data-slide="next">
+                <a class="carousel-control-next wow fadeInUp" data-wow-delay="0.6s" href="#carouselA" role="button" data-slide="next">
                   <span class="fa-solid fa-forward" aria-hidden="true"></span>
                   <span class="sr-only">Next</span>
                 </a>
@@ -170,11 +170,11 @@
                     <img src="img/Coop Cop2.png" class="d-block w-100" alt="IBM SOSECURE">
                   </div>
                 </div>
-                <button class="carousel-control-prev" type="button" data-target="#carouselcop" data-slide="prev">
+                <button class="carousel-control-prev wow fadeInUp" data-wow-delay="0.6s" type="button" data-target="#carouselcop" data-slide="prev">
                   <span class="fa-solid fa-backward" aria-hidden="true"></span>
                   <span class="sr-only">Previous</span>
                 </button>
-                <button class="carousel-control-next" type="button" data-target="#carouselcop" data-slide="next">
+                <button class="carousel-control-next wow fadeInUp" data-wow-delay="0.6s" type="button" data-target="#carouselcop" data-slide="next">
                   <span class="fa-solid fa-forward" aria-hidden="true"></span>
                   <span class="sr-only">Next</span>
                 </button>
