--- a/aboutus.html
+++ b/aboutus.html
@@ -161,7 +161,7 @@
               <p class="wow fadeInUp" data-wow-delay="0.5s">
                 บริษัทหน่วยงานองค์กรที่สมาชิกชมรมได้ไปทำปฏิบัติสหกิจศึกษาและฝึกงานได้นำความรู้ไปปรับใช้ประยุกต์ใช้กับงานจริง
               </p>
-              <div id="carouselcop" class="carousel slide wow fadeInUp user-select-none" data-ride="carousel">
+              <div id="carouselcop" class="carousel slide wow fadeInUp user-select-none" data-wow-delay="0.5s" data-ride="carousel">
                 <div class="carousel-inner">
                   <div class="carousel-item active">
                     <img src="img/Coop Cop.png" class="d-block w-100" alt="KPMG NECTEC">
