--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
             onclick="location.href='cybersec.html'"
           >
             <div class="hero">
-              <div class="centered">
+              <div class="centered" type="button">
                 <h1 class="wow fadeInUp user-select-none" data-wow-delay="0.1s">
                   <i class="fas fa-user-ninja"></i> Cybersec
                 </h1>
@@ -148,7 +148,7 @@
             onclick="location.href='activities.html'"
           >
             <div class="hero">
-              <div class="centered">
+              <div class="centered" type="button">
                 <h1 class="wow fadeInUp user-select-none" data-wow-delay="0.1s">
                   <i class="fas fa-fire-alt"></i> Activities
                 </h1>
@@ -171,7 +171,7 @@
             onclick="location.href='aboutus.html'"
           >
             <div class="hero">
-              <div class="centered">
+              <div class="centered" type="button">
                 <h1 class="wow fadeInUp user-select-none" data-wow-delay="0.1s">
                   <i class="fas fa-info-circle"></i> About Us
                 </h1>
