Update Hero & PWA

--- a/common/navbar.html
+++ b/common/navbar.html
@@ -1,8 +1,7 @@
 <nav class="user-select-none">
   <span
     id="brand"
-    class="circleScaleBtn2 logo wow fadeInDown
-    data-wow-delay="0.6s"
+    class="circleScaleBtn2 logo wow fadeInDown data-wow-delay="0.6s"
     onclick="location.href='index.html'"
   >
     <img
