--- a/index.html
+++ b/index.html
@@ -84,7 +84,32 @@
       <!--------------- navbar starts here --------------->
       <div id="navigation"></div>
       <!--------------- navbar ends here --------------->
-
+      <div class="snowflakes" aria-hidden="true">
+        <div class="snowflake">
+          ❅
+        </div>
+        <div class="snowflake">
+          ❆
+        </div>
+        <div class="snowflake">
+          ❅
+        </div>
+        <div class="snowflake">
+          ❆
+        </div>
+        <div class="snowflake">
+          ❅
+        </div>
+        <div class="snowflake">
+          ❆
+        </div>
+        <div class="snowflake">
+          ❅
+        </div>
+        <div class="snowflake">
+          ❆
+        </div>
+      </div>
       <!--------------- hero section starts here --------------->
       <div rel="preload" as="image" class="bgimg wow fadeInUp black">
         <div class="hero">
