--- a/404.html
+++ b/404.html
@@ -76,37 +76,73 @@
         </span>
       </nav>
       <!--------------- navbar ends here --------------->
-
+      <div class="snowflakes" aria-hidden="true">
+        <div class="snowflake">
+            ❗
+        </div>
+        <div class="snowflake">
+            💔
+        </div>
+        <div class="snowflake">
+            💥
+        </div>
+        <div class="snowflake">
+            ❗
+        </div>
+        <div class="snowflake">
+            💔
+        </div>
+        <div class="snowflake">
+            💥
+        </div> 
+        <div class="snowflake">
+            ❗
+        </div>
+        <div class="snowflake">
+            💔
+        </div>
+        <div class="snowflake">
+            💥
+        </div> <div class="snowflake">
+            ❗
+        </div>
+        <div class="snowflake">
+            💔
+        </div>
+        <div class="snowflake">
+            💥
+        </div>
+      </div>
       <!--------------- hero section starts here --------------->
 
-      <div rel="preload" as="image" class="bgimg404 wow fadeInUp">
+      <div rel="preload" as="image" class="bgimg404 wow bounceIn">
         <div class="hero user-select-none">
           <div class="header">
-            <h1 class="wow fadeInUp" data-wow-delay="0.1s">
-              <span class="rainbowText">404 Page not found</span>
+            <h1 class="wow bounceIn" data-wow-delay="0.1s">
+              <span class="rainbowText">404 Page not found!</span>
             </h1>
-            <h3 class="wow fadeInUp" data-wow-delay="0.2s">
+            <h3 class="wow bounceIn" data-wow-delay="0.2s">
               <i class="fa-solid fa-hand-pointer"></i> Tap to
               <span id="control-icon"
                 ><i class="fa-solid fa-play"></i> &
                 <i class="fa-solid fa-pause"></i
               ></span>
             </h3>
-            <h3 class="wow fadeInUp" data-wow-delay="0.3s">
+            <h3 class="wow bounceIn" data-wow-delay="0.3s">
               <i class="fa-solid fa-music"></i>
               <i class="fa-solid fa-music"></i>
               <i class="fa-solid fa-music"></i>
             </h3>
-            <h6 class="wow fadeInUp" data-wow-delay="0.4s">
+            <h6 class="wow bounceIn" data-wow-delay="0.4s">
               Never gonna give you up
             </h6>
-            <h6 class="wow fadeInUp" data-wow-delay="0.5s">
+            <h6 class="wow bounceIn" data-wow-delay="0.5s">
               Never gonna let you down
             </h6>
-            <h6 class="wow fadeInUp" data-wow-delay="0.6s">
+            <h6 class="wow bounceIn" data-wow-delay="0.6s">
               Never gonna run around and desert you
             </h6>
-            <h3 class="wow fadeInUp" data-wow-delay="0.7s">
+            <h3 class="wow bounceIn" data-wow-delay="0.7s">
               <i class="fa-solid fa-music"></i>
               <i class="fa-solid fa-music"></i>
               <i class="fa-solid fa-music"></i>
