--- a/aboutus.html
+++ b/aboutus.html
@@ -109,17 +109,20 @@
                   <li data-target="#carouselA" data-slide-to="2"></li>
                   <li data-target="#carouselA" data-slide-to="3"></li>
                   <li data-target="#carouselA" data-slide-to="4"></li>
+                  <li data-target="#carouselA" data-slide-to="5"></li>
                 </ol>
                 <div class="carousel-inner wow fadeInUp">
                   <div class="carousel-item active">
                     <img class="d-block w-100" src="img/CyberPic_coop.png" alt="1">
-                   
                   </div>
                   <div class="carousel-item">
                     <img class="d-block w-100" src="img/Takahashi.png" alt="2">
                   </div>
                   <div class="carousel-item">
                     <img class="d-block w-100" src="img/Cisco-Innovation-Challenge-2019.jpg" alt="3">
+                  </div>
+                  <div class="carousel-item">
+                    <img class="d-block w-100" src="img/RTAFCyberOps.png" alt="2">
                   </div>
                   <div class="carousel-item">
                     <img class="d-block w-100" src="img/finsec.jpg" alt="4">
@@ -209,6 +212,16 @@
               >
                 <i class="fas fa-handshake"></i> Join us!
               </button>
+              <br>
+            </div>
+
+            <div class="col-lg-12">
+              <br>
+              <h2 class="wow fadeInUp" data-wow-delay="0.4s">
+                <i class="fa-solid fa-leaf"></i> รักษ์โลก
+              </h2>
+              <p class="wow fadeInUp" data-wow-delay="0.6s">
+               เว็ปของทางเรานั้นเป็น Always Dark Mode ทำให้อุปกรณ์ที่ใช้หน้าจอ OLED หรือ Mini LED สามารถลดการใช้พลังงานลงได้และประหยัดพลังงานได้มากขึ้น!
               <br>
             </div>
 
