--- a/common/footer.html
+++ b/common/footer.html
@@ -23,7 +23,6 @@
             <span
               id="brand"
               class="logo wow fadeInDown data-wow-delay="0.6s"
-              onclick="location.href='badapple.html'"
             >
             <img
               rel="preload"
@@ -31,6 +30,7 @@
               width="auto"
               height="55"
               src="img/TNICyberWeb.png"
+              onclick="location.href='badapple.html'"
             />
             <img
               rel="preload"
@@ -38,6 +38,7 @@
               width="auto"
               height="55"
               src="img/TNIIcon.png"
+              onclick="location.href='HPNY.html'"
             />
             </span>
           </h5>
