--- a/landing.html
+++ b/landing.html
@@ -5,30 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta name="theme-color" content="#000000" />
-    <meta name="TNI Cybersec" content="Home" />
+    <meta name="TNI Cybersec" content="Landing" />
 
     <meta property="og:title" content="TNI Cybersec" />
     <meta property="og:image" content="/img/CyberPic.jpg" />
-    <meta
-      property="og:description"
-      content="We study & cyber research to watch out for new threats and expand on new knowledge in the cybersec."
-    />
+    <meta property="og:description" content="Landing" />
     <meta property="og:url" content="https://tni-cybersec.github.io" />
 
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:title" content="TNI Cybersec" />
     <meta name="twitter:image" content="/img/CyberPic.jpg" />
-    <meta
-      name="twitter:description"
-      content="We study & cyber research to watch out for new threats and expand on new knowledge in the cybersec."
-    />
+    <meta name="twitter:description" content="Landing" />
     <meta name="twitter:site" content="https://tni-cybersec.github.io" />
 
-    <title>TNI Cybersec | Home</title>
-    <meta
-      name="description"
-      content="We study & cyber research to watch out for new threats and expand on new knowledge in the cybersec."
-    />
+    <title>TNI Cybersec | 🛬 Landing! </title>
+    <meta name="description" content="Landing" />
 
     <!-- stylesheet -->
     <link rel="stylesheet" href="css/style.css" />
@@ -82,55 +73,44 @@
 
     <div class="wrapper">
       <!--------------- navbar starts here --------------->
-      <div id="navigation"></div>
+    <!--------------- navbar starts here --------------->
+    <div id="navigation"></div>
       <!--------------- navbar ends here --------------->
       <div class="snowflakes" aria-hidden="true">
         <div class="snowflake">
-          ❅
-          </div>
-          <div class="snowflake">
-          ❆
-          </div>
-          <div class="snowflake">
-          ❅
-          </div>
-          <div class="snowflake">
-          ❆
-          </div>
-          <div class="snowflake">
-          ❅
-          </div>
-          <div class="snowflake">
-          ❆
-          </div>
-          <div class="snowflake">
-            ❅
-          </div>
-          <div class="snowflake">
-            ❆
-          </div>
-          <div class="snowflake">
-            ❅
-          </div>
-          <div class="snowflake">
-            ❆
-          </div>
-          <div class="snowflake">
-            ❅
-          </div>
-          <div class="snowflake">
-            ❆
-          </div>
+          👨‍💻
+        </div>
+        <div class="snowflake">
+          👩‍💻
+        </div>
+        <div class="snowflake">
+          👨‍💻
+        </div>
+        <div class="snowflake">
+          👩‍💻
+        </div>
+        <div class="snowflake">
+            👨‍💻
+        </div>
+        <div class="snowflake">
+            👩‍💻
+        </div>
+        <div class="snowflake">
+            👨‍💻
+        </div>
+        <div class="snowflake">
+            👩‍💻
+        </div>
       </div>
       <!--------------- hero section starts here --------------->
       <div rel="preload" as="image" class="bgimg wow fadeInUp black">
         <div class="hero">
           <div class="header">
             <h1 class="wow fadeInUp user-select-none" data-wow-delay="0.1s">
-              <span id="status1"></span>
+              👋Wellcome!👋
             </h1>
             <h5 class="wow fadeInUp user-select-none" data-wow-delay="0.3s">
-              <span id="status2"></span>
+              👋ยินดีต้อนรับสมาชิกใหม่ทุกท่าน👋
             </h5>
           </div>
         </div>
@@ -141,20 +121,20 @@
 
     <!--------------- projects section starts here --------------->
     <div class="container-fluid">
-
+      
       <br>
       <h6 class="wow fadeInUp user-select-none" data-wow-delay="0.2s">
-          <img
-            rel="preload"
-            as="image"
-            width="auto"
-            height="22"
-            src="img/TNICyberICON.png"
-          /> <span id="hero"></span>
-      </h6>
+        <img
+          rel="preload"
+          as="image"
+          width="auto"
+          height="22"
+          src="img/TNICyberICON.png"
+        /> เลือกเข้าตามเมนูได้เลย
+    </h6>
 
-      <div class="vertical wow fadeInUp"></div>
-      <br>
+    <div class="vertical wow fadeInUp"></div>
+    <br>
 
       <div class="whitespace"></div>
       <div class="whitespace"></div>
@@ -167,12 +147,12 @@
             type="button"
             class="col-lg-12 type type1 border border-light wow fadeInUp circleScaleBtn"
             data-wow-delay="0.2s"
-            onclick="location.href='cybersec.html'"
+            onclick="$('#ioTable').modal('hide');$('#social').modal();$('#social').css('overflow-y','auto')"
           >
             <div class="hero">
               <div class="centered" type="button">
                 <h1 class="wow fadeInUp user-select-none" data-wow-delay="0.1s">
-                  <i class="fas fa-user-ninja"></i><br>Cybersec
+                  <i class="fas fa-user-ninja"></i><br>Join Us!
                 </h1>
               </div>
             </div>
