--- a/landing.html
+++ b/landing.html
@@ -106,8 +106,11 @@
       <div rel="preload" as="image" class="bgimg wow fadeInUp black">
         <div class="hero">
           <div class="header">
-            <h1 class="wow fadeInUp user-select-none" data-wow-delay="0.1s">
+            <h3 class="wow fadeInUp user-select-none" data-wow-delay="0.1s">
               👋Wellcome!👋
+            </h3>
+            <h1 class="wow fadeInUp user-select-none" data-wow-delay="0.1s">
+              👋ようこそ!👋
             </h1>
             <h5 class="wow fadeInUp user-select-none" data-wow-delay="0.3s">
               👋ยินดีต้อนรับสมาชิกใหม่ทุกท่าน👋
