--- a/termsofservice.html
+++ b/termsofservice.html
@@ -152,7 +152,7 @@
             </p>
             <button
              type="button"
-             onclick="window.open('https://github.com/TNI-Cybersec/tni-cybersec.github.io/releases')"
+             onclick="window.open('https://github.com/TNI-Cybersec/tni-cybersec.github.io')"
              class="btn btn-outline-light btn-block btn-lg wow fadeInUp"
              data-wow-delay="0.6s"
            >
