--- a/termsofservice.html
+++ b/termsofservice.html
@@ -72,7 +72,7 @@
       <div class="whitespace"></div>
 
       <!--------------- hero section starts here --------------->
-      <div class="container">
+      <div class="container user-select-none">
         <div class="hero-content">
           <br />
 
@@ -94,7 +94,7 @@
 
       <!--------------- content info section starts here --------------->
 
-      <div class="container">
+      <div class="container user-select-none">
         <div class="hero-content">
           <div class="row">
             <div class="col-lg-12">
@@ -161,7 +161,7 @@
           <br>
           
 
-          <div class="row">
+          <div class="row user-select-none">
             <div class="col-lg-12">
               <br />
               <h2 class="wow fadeInUp" data-wow-delay="0.4s">
