--- a/cybersec.html
+++ b/cybersec.html
@@ -221,7 +221,7 @@
               </p>
             
               <p class="wow fadeInUp" data-wow-delay="0.5s">
-                โดยเราจะมุ่งเน้นการค้นคว้าทดลองวิจัยภัยคุกความใหม่ๆเพื่อเท่าทันต่อความเสี่ยงที่จะเกิดจากโดนโจมตีหรือระบบรั่วไหลของข้อมูลที่จะเกิดขึ่นและเราจะมุ่งมั้นที่จะศึกษาเทคโนโลยีใหม่ๆในอนาคตอันใกล้ที่อาจจะมีความเสี่ยงทางไซเบอร์ที่จะเกิดขึ้นในอนาคต
+                โดยเราจะมุ่งเน้นการค้นคว้าทดลองวิจัยภัยคุกคามใหม่ๆเพื่อเท่าทันต่อความเสี่ยงที่จะเกิดจากโดนโจมตีหรือระบบรั่วไหลของข้อมูลที่จะเกิดขึ่นและเราจะมุ่งมั้นที่จะศึกษาเทคโนโลยีใหม่ๆในอนาคตอันใกล้ที่อาจจะมีความเสี่ยงทางไซเบอร์ที่จะเกิดขึ้นในอนาคต
                 ท่านสามารถ <span class="badge badge-light"
                   ><i class="fa-solid fa-question"></i> อ่านเพิ่มเติม</span
                 >
