--- a/landing.html
+++ b/landing.html
@@ -155,7 +155,7 @@
             <div class="hero">
               <div class="centered" type="button">
                 <h1 class="wow fadeInUp user-select-none" data-wow-delay="0.1s">
-                  <i class="fas fa-user-ninja"></i><br>Register
+                  <i class="fa-solid fa-pen-to-square"></i><br>Register
                 </h1>
               </div>
             </div>
@@ -221,7 +221,7 @@
       <div class="modal-content ripple1">
         <div class="modal-header">
           <h4 class="modal-title rainbowText user-select-none">
-            <i class="fas fa-handshake"></i> Register Forms!
+            <i class="fa-solid fa-pen-to-square"></i> Register Forms!
           </h4>
         </div>
        
