Change CountAPI key to `landing`

--- a/landing.html
+++ b/landing.html
@@ -60,7 +60,7 @@
     <!-- CountAPI -->
     <script
       async
-      src="https://api.countapi.xyz/hit/tni-cybersec.github.io/visits"
+      src="https://api.countapi.xyz/hit/tni-cybersec.github.io/landing"
     ></script>
   </head>
 
