Format with Prettier

--- a/404.html
+++ b/404.html
@@ -77,41 +77,18 @@
       </nav>
       <!--------------- navbar ends here --------------->
       <div class="snowflakes" aria-hidden="true">
-        <div class="snowflake">
-            ❗
-        </div>
-        <div class="snowflake">
-            💔
-        </div>
-        <div class="snowflake">
-            💥
-        </div>
-        <div class="snowflake">
-            ❗
-        </div>
-        <div class="snowflake">
-            💔
-        </div>
-        <div class="snowflake">
-            💥
-        </div> 
-        <div class="snowflake">
-            ❗
-        </div>
-        <div class="snowflake">
-            💔
-        </div>
-        <div class="snowflake">
-            💥
-        </div> <div class="snowflake">
-            ❗
-        </div>
-        <div class="snowflake">
-            💔
-        </div>
-        <div class="snowflake">
-            💥
-        </div>
+        <div class="snowflake">❗</div>
+        <div class="snowflake">💔</div>
+        <div class="snowflake">💥</div>
+        <div class="snowflake">❗</div>
+        <div class="snowflake">💔</div>
+        <div class="snowflake">💥</div>
+        <div class="snowflake">❗</div>
+        <div class="snowflake">💔</div>
+        <div class="snowflake">💥</div>
+        <div class="snowflake">❗</div>
+        <div class="snowflake">💔</div>
+        <div class="snowflake">💥</div>
       </div>
       <!--------------- hero section starts here --------------->
 
