--- a/badapple.html
+++ b/badapple.html
@@ -72,9 +72,8 @@
       }
 
       .shadows {
-           text-shadow: rgb(0, 0, 0) 2px 0 10px;
+        text-shadow: rgb(0, 0, 0) 2px 0 10px;
       }
-
     </style>
   </head>
 
@@ -82,7 +81,6 @@
     <!-- loader -->
     <div id="loader"></div>
 
-   
     <div class="wrapper">
       <!--------------- navbar starts here --------------->
       <nav>
@@ -102,50 +100,35 @@
       </nav>
       <!--------------- navbar ends here --------------->
       <div class="snowflakes" aria-hidden="true">
-        <div class="snowflake">
-          🍎
-        </div>
-        <div class="snowflake">
-          🍏
-        </div>
-        <div class="snowflake">
-          🍎
-        </div>
-        <div class="snowflake">
-          🍏
-        </div>
-        <div class="snowflake">
-            🍎
-        </div>
-        <div class="snowflake">
-            🍏
-        </div>
-        <div class="snowflake">
-            🍎
-        </div>
-        <div class="snowflake">
-            🍏
-        </div>
+        <div class="snowflake">🍎</div>
+        <div class="snowflake">🍏</div>
+        <div class="snowflake">🍎</div>
+        <div class="snowflake">🍏</div>
+        <div class="snowflake">🍎</div>
+        <div class="snowflake">🍏</div>
+        <div class="snowflake">🍎</div>
+        <div class="snowflake">🍏</div>
       </div>
       <!--------------- hero section starts here --------------->
       <video autoplay loop id="badapple">
-        <source src="video/badapple.mp4" type="video/mp4">
+        <source src="video/badapple.mp4" type="video/mp4" />
         Your browser does not support HTML5 video.
       </video>
       <div class="container centered user-select-none">
-      <div class="wow bounceIn">
+        <div class="wow bounceIn">
           <h1>🍎</h1>
-          <h1 class="rainbowText"> Bad Apple!!</h1>
-          <h2 class="shadows"><i class="fa-solid fa-hand-pointer"></i> Tap to
-          <span id="control-icon" onclick="myFunction()"
-            ><i class="fa-solid fa-play"></i> &
-            <i class="fa-solid fa-pause"></i>
-          </span>
+          <h1 class="rainbowText">Bad Apple!!</h1>
+          <h2 class="shadows">
+            <i class="fa-solid fa-hand-pointer"></i> Tap to
+            <span id="control-icon" onclick="myFunction()"
+              ><i class="fa-solid fa-play"></i> &
+              <i class="fa-solid fa-pause"></i>
+            </span>
           </h2>
         </div>
       </div>
-      
-    <!-- jQuery -->
+    </div>
+
     <script
       src="https://code.jquery.com/jquery-3.6.0.min.js"
       integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
