--- a/index.html
+++ b/index.html
@@ -85,42 +85,18 @@
       <div id="navigation"></div>
       <!--------------- navbar ends here --------------->
       <div class="snowflakes" aria-hidden="true">
-        <div class="snowflake">
-          ❅
-          </div>
-          <div class="snowflake">
-          ❆
-          </div>
-          <div class="snowflake">
-          ❅
-          </div>
-          <div class="snowflake">
-          ❆
-          </div>
-          <div class="snowflake">
-          ❅
-          </div>
-          <div class="snowflake">
-          ❆
-          </div>
-          <div class="snowflake">
-            ❅
-          </div>
-          <div class="snowflake">
-            ❆
-          </div>
-          <div class="snowflake">
-            ❅
-          </div>
-          <div class="snowflake">
-            ❆
-          </div>
-          <div class="snowflake">
-            ❅
-          </div>
-          <div class="snowflake">
-            ❆
-          </div>
+        <div class="snowflake">❅</div>
+        <div class="snowflake">❆</div>
+        <div class="snowflake">❅</div>
+        <div class="snowflake">❆</div>
+        <div class="snowflake">❅</div>
+        <div class="snowflake">❆</div>
+        <div class="snowflake">❅</div>
+        <div class="snowflake">❆</div>
+        <div class="snowflake">❅</div>
+        <div class="snowflake">❆</div>
+        <div class="snowflake">❅</div>
+        <div class="snowflake">❆</div>
       </div>
       <!--------------- hero section starts here --------------->
       <div rel="preload" as="image" class="bgimg wow fadeInUp black">
@@ -141,20 +117,20 @@
 
     <!--------------- projects section starts here --------------->
     <div class="container-fluid">
-
-      <br>
+      <br />
       <h6 class="wow fadeInUp user-select-none" data-wow-delay="0.2s">
-          <img
-            rel="preload"
-            as="image"
-            width="auto"
-            height="22"
-            src="img/TNICyberICON.png"
-          /> <span id="hero"></span>
+        <img
+          rel="preload"
+          as="image"
+          width="auto"
+          height="22"
+          src="img/TNICyberICON.png"
+        />
+        <span id="hero"></span>
       </h6>
 
       <div class="vertical wow fadeInUp"></div>
-      <br>
+      <br />
 
       <div class="whitespace"></div>
       <div class="whitespace"></div>
@@ -172,7 +148,7 @@
             <div class="hero">
               <div class="centered" type="button">
                 <h1 class="wow fadeInUp user-select-none" data-wow-delay="0.1s">
-                  <i class="fas fa-user-ninja"></i><br>Cybersec
+                  <i class="fas fa-user-ninja"></i><br />Cybersec
                 </h1>
               </div>
             </div>
@@ -195,7 +171,7 @@
             <div class="hero">
               <div class="centered" type="button">
                 <h1 class="wow fadeInUp user-select-none" data-wow-delay="0.1s">
-                  <i class="fas fa-fire-alt"></i><br>Activities
+                  <i class="fas fa-fire-alt"></i><br />Activities
                 </h1>
               </div>
             </div>
@@ -218,7 +194,7 @@
             <div class="hero">
               <div class="centered" type="button">
                 <h1 class="wow fadeInUp user-select-none" data-wow-delay="0.1s">
-                  <i class="fas fa-info-circle"></i><br>About Us
+                  <i class="fas fa-info-circle"></i><br />About Us
                 </h1>
               </div>
             </div>
