--- a/aboutus.html
+++ b/aboutus.html
@@ -74,21 +74,21 @@
       <!--------------- hero section starts here --------------->
       <div class="container user-select-none">
         <div class="hero-content">
-          <br>
+          <br />
           <div class="row">
             <div class="col-lg-12">
               <h1 class="wow fadeInUp" data-wow-delay="0.3s">
                 <i class="fas fa-info-circle"></i> About Us
               </h1>
-              <br>
+              <br />
               <h2 class="wow fadeInUp user-select-none" data-wow-delay="0.4s">
-                  <img
-                    rel="preload"
-                    as="image"
-                    width="auto"
-                    height="55"
-                    src="img/TNICyberWeb.png"
-                  />
+                <img
+                  rel="preload"
+                  as="image"
+                  width="auto"
+                  height="55"
+                  src="img/TNICyberWeb.png"
+                />
               </h2>
               <h5 class="wow fadeInUp" data-wow-delay="0.5s">
                 "We study & cyber research to watch out for new threats and
@@ -99,51 +99,89 @@
               </p>
 
               <div
-              class="containers border border-light wow fadeInUp"
-              data-wow-delay="0.6s" id="containers">
-              
-              <div id="carouselA" class="carousel slide" data-ride="carousel">
-                <ol class="carousel-indicators wow fadeInUp" data-wow-delay="0.6s">
-                  <li data-target="#carouselA" data-slide-to="0" class="active"></li>
-                  <li data-target="#carouselA" data-slide-to="1"></li>
-                  <li data-target="#carouselA" data-slide-to="2"></li>
-                  <li data-target="#carouselA" data-slide-to="3"></li>
-                  <li data-target="#carouselA" data-slide-to="4"></li>
-                  <li data-target="#carouselA" data-slide-to="5"></li>
-                </ol>
-                <div class="carousel-inner wow fadeInUp">
-                  <div class="carousel-item active">
-                    <img class="d-block w-100" src="img/CyberPic_coop.png" alt="1">
+                class="containers border border-light wow fadeInUp"
+                data-wow-delay="0.6s"
+                id="containers"
+              >
+                <div id="carouselA" class="carousel slide" data-ride="carousel">
+                  <ol
+                    class="carousel-indicators wow fadeInUp"
+                    data-wow-delay="0.6s"
+                  >
+                    <li
+                      data-target="#carouselA"
+                      data-slide-to="0"
+                      class="active"
+                    ></li>
+                    <li data-target="#carouselA" data-slide-to="1"></li>
+                    <li data-target="#carouselA" data-slide-to="2"></li>
+                    <li data-target="#carouselA" data-slide-to="3"></li>
+                    <li data-target="#carouselA" data-slide-to="4"></li>
+                    <li data-target="#carouselA" data-slide-to="5"></li>
+                  </ol>
+                  <div class="carousel-inner wow fadeInUp">
+                    <div class="carousel-item active">
+                      <img
+                        class="d-block w-100"
+                        src="img/CyberPic_coop.png"
+                        alt="1"
+                      />
+                    </div>
+                    <div class="carousel-item">
+                      <img
+                        class="d-block w-100"
+                        src="img/Takahashi.png"
+                        alt="2"
+                      />
+                    </div>
+                    <div class="carousel-item">
+                      <img
+                        class="d-block w-100"
+                        src="img/Cisco-Innovation-Challenge-2019.jpg"
+                        alt="3"
+                      />
+                    </div>
+                    <div class="carousel-item">
+                      <img
+                        class="d-block w-100"
+                        src="img/RTAFCyberOps.png"
+                        alt="2"
+                      />
+                    </div>
+                    <div class="carousel-item">
+                      <img class="d-block w-100" src="img/finsec.jpg" alt="4" />
+                    </div>
+                    <div class="carousel-item">
+                      <img class="d-block w-100" src="img/tni.jpg" alt="5" />
+                    </div>
                   </div>
-                  <div class="carousel-item">
-                    <img class="d-block w-100" src="img/Takahashi.png" alt="2">
-                  </div>
-                  <div class="carousel-item">
-                    <img class="d-block w-100" src="img/Cisco-Innovation-Challenge-2019.jpg" alt="3">
-                  </div>
-                  <div class="carousel-item">
-                    <img class="d-block w-100" src="img/RTAFCyberOps.png" alt="2">
-                  </div>
-                  <div class="carousel-item">
-                    <img class="d-block w-100" src="img/finsec.jpg" alt="4">
-                  </div>
-                  <div class="carousel-item">
-                    <img class="d-block w-100" src="img/tni.jpg" alt="5">
-                  </div>
+                  <a
+                    class="carousel-control-prev wow fadeInUp"
+                    data-wow-delay="0.6s"
+                    href="#carouselA"
+                    role="button"
+                    data-slide="prev"
+                  >
+                    <span
+                      class="fa-solid fa-backward"
+                      aria-hidden="true"
+                    ></span>
+                    <span class="sr-only">Previous</span>
+                  </a>
+                  <a
+                    class="carousel-control-next wow fadeInUp"
+                    data-wow-delay="0.6s"
+                    href="#carouselA"
+                    role="button"
+                    data-slide="next"
+                  >
+                    <span class="fa-solid fa-forward" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                  </a>
                 </div>
-                <a class="carousel-control-prev wow fadeInUp" data-wow-delay="0.6s" href="#carouselA" role="button" data-slide="prev">
-                  <span class="fa-solid fa-backward" aria-hidden="true"></span>
-                  <span class="sr-only">Previous</span>
-                </a>
-                <a class="carousel-control-next wow fadeInUp" data-wow-delay="0.6s" href="#carouselA" role="button" data-slide="next">
-                  <span class="fa-solid fa-forward" aria-hidden="true"></span>
-                  <span class="sr-only">Next</span>
-                </a>
               </div>
-              
-            </div>
-              <br>
-              <br>
+              <br />
+              <br />
               <h2 class="wow fadeInUp user-select-none" data-wow-delay="0.4s">
                 <img
                   rel="preload"
@@ -154,30 +192,59 @@
                 />
               </h2>
               <p class="wow fadeInUp" data-wow-delay="0.5s">
-                เราเป็นชมรมทางด้าน Cyber Security & Technology ซึ่งครอบคลุมทั้งในหลายด้านเช่น ความมั่นคงทางไซเบอร์, ความปลอดภัยทางไซเบอร์, ความน่าเชื่อถือของระบบหรือขบวนการต่างๆทางไซเบอร์และการวิจัยศึกษาคิดค้นการนำเครื่องมือทางด้านเทคโนโลยี ที่ร่วมมือกันหลายองค์กรโดย
-                Thai-Nichi Institute of Technology (TNI, 泰日工業大学) เป็นแกนนำหลัก
+                เราเป็นชมรมทางด้าน Cyber Security & Technology
+                ซึ่งครอบคลุมทั้งในหลายด้านเช่น ความมั่นคงทางไซเบอร์,
+                ความปลอดภัยทางไซเบอร์,
+                ความน่าเชื่อถือของระบบหรือขบวนการต่างๆทางไซเบอร์และการวิจัยศึกษาคิดค้นการนำเครื่องมือทางด้านเทคโนโลยี
+                ที่ร่วมมือกันหลายองค์กรโดย Thai-Nichi Institute of Technology
+                (TNI, 泰日工業大学) เป็นแกนนำหลัก
               </p>
-              <br>
+              <br />
               <h2 class="wow fadeInUp" data-wow-delay="0.4s">
                 <i class="fa-solid fa-handshake-angle"></i> Cooperative
               </h2>
               <p class="wow fadeInUp" data-wow-delay="0.5s">
                 บริษัทหน่วยงานองค์กรที่สมาชิกชมรมได้ไปทำปฏิบัติสหกิจศึกษาและฝึกงานได้นำความรู้ไปปรับใช้ประยุกต์ใช้กับงานจริง
               </p>
-              <div id="carouselcop" class="carousel slide wow fadeInUp user-select-none" data-wow-delay="0.5s" data-ride="carousel">
+              <div
+                id="carouselcop"
+                class="carousel slide wow fadeInUp user-select-none"
+                data-wow-delay="0.5s"
+                data-ride="carousel"
+              >
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img src="img/Coop Cop.png" class="d-block w-100" alt="KPMG NECTEC">
+                    <img
+                      src="img/Coop Cop.png"
+                      class="d-block w-100"
+                      alt="KPMG NECTEC"
+                    />
                   </div>
                   <div class="carousel-item">
-                    <img src="img/Coop Cop2.png" class="d-block w-100" alt="IBM SOSECURE">
+                    <img
+                      src="img/Coop Cop2.png"
+                      class="d-block w-100"
+                      alt="IBM SOSECURE"
+                    />
                   </div>
                 </div>
-                <button class="carousel-control-prev wow fadeInUp" data-wow-delay="0.6s" type="button" data-target="#carouselcop" data-slide="prev">
+                <button
+                  class="carousel-control-prev wow fadeInUp"
+                  data-wow-delay="0.6s"
+                  type="button"
+                  data-target="#carouselcop"
+                  data-slide="prev"
+                >
                   <span class="fa-solid fa-backward" aria-hidden="true"></span>
                   <span class="sr-only">Previous</span>
                 </button>
-                <button class="carousel-control-next wow fadeInUp" data-wow-delay="0.6s" type="button" data-target="#carouselcop" data-slide="next">
+                <button
+                  class="carousel-control-next wow fadeInUp"
+                  data-wow-delay="0.6s"
+                  type="button"
+                  data-target="#carouselcop"
+                  data-slide="next"
+                >
                   <span class="fa-solid fa-forward" aria-hidden="true"></span>
                   <span class="sr-only">Next</span>
                 </button>
@@ -193,11 +260,11 @@
 
       <div class="container user-select-none">
         <div class="hero-content">
-          <br>
+          <br />
           <div class="row">
             <div class="col-lg-12">
               <h2 class="wow fadeInUp" data-wow-delay="0.4s">
-               <i class="fa-solid fa-comments"></i> ติดต่อกับเรา
+                <i class="fa-solid fa-comments"></i> ติดต่อกับเรา
               </h2>
               <p class="wow fadeInUp" data-wow-delay="0.6s">
                 อยากร่วมงานกับเราหรือติดต่อสอบถามท่านสามารถติดต่อกับเราได้โดยตรงทางด้านล่างนี้
@@ -212,46 +279,50 @@
               >
                 <i class="fas fa-handshake"></i> Join us!
               </button>
-              <br>
+              <br />
             </div>
 
             <div class="col-lg-12">
-              <br>
+              <br />
               <h2 class="wow fadeInUp" data-wow-delay="0.4s">
                 <i class="fa-solid fa-leaf"></i> รักษ์โลก
               </h2>
               <p class="wow fadeInUp" data-wow-delay="0.6s">
-               เว็ปของทางเรานั้นเป็น Always Dark Mode ทำให้อุปกรณ์ที่ใช้หน้าจอ OLED หรือ Mini LED สามารถลดการใช้พลังงานลงได้และประหยัดพลังงานได้มากขึ้น!
-               </p>
+                เว็ปของทางเรานั้นเป็น Always Dark Mode ทำให้อุปกรณ์ที่ใช้หน้าจอ
+                OLED หรือ Mini LED
+                สามารถลดการใช้พลังงานลงได้และประหยัดพลังงานได้มากขึ้น!
+              </p>
             </div>
 
             <div class="col-lg-12">
-              <br>
+              <br />
               <h2 class="wow fadeInUp" data-wow-delay="0.4s">
                 <img
-                rel="preload"
-                as="image"
-                width="auto"
-                height="35"
-                src="img/Open-source.png"
-              /> Open-source
+                  rel="preload"
+                  as="image"
+                  width="auto"
+                  height="35"
+                  src="img/Open-source.png"
+                />
+                Open-source
               </h2>
               <p class="wow fadeInUp" data-wow-delay="0.6s">
-               เว็ปของทางเรานั้นเป็น All open-source ท่านสามารถดู source code ของเว็ปทั้งหมดได้ที่ <i class="fas fa-arrow-circle-down"></i>
+                เว็ปของทางเรานั้นเป็น All open-source ท่านสามารถดู source code
+                ของเว็ปทั้งหมดได้ที่ <i class="fas fa-arrow-circle-down"></i>
               </p>
               <button
-               type="button"
-               onclick="window.open('https://github.com/TNI-Cybersec/tni-cybersec.github.io')"
-               class="btn btn-outline-light btn-block btn-lg wow fadeInUp"
-               data-wow-delay="0.6s"
-             >
-             <i class="fab fa-github"></i> TNI Cybersec
-             </button>
-               <br>
+                type="button"
+                onclick="window.open('https://github.com/TNI-Cybersec/tni-cybersec.github.io')"
+                class="btn btn-outline-light btn-block btn-lg wow fadeInUp"
+                data-wow-delay="0.6s"
+              >
+                <i class="fab fa-github"></i> TNI Cybersec
+              </button>
+              <br />
             </div>
 
             <div class="col-lg-12">
-              <br>
+              <br />
               <h2 class="wow fadeInUp" data-wow-delay="0.4s">
                 <i class="far fa-window-maximize"></i> Web Information
               </h2>
@@ -267,7 +338,7 @@
               >
                 <i class="fa-brands fa-hotjar"></i> New Feature!
               </button>
-              <br>
+              <br />
 
               <p class="wow fadeInUp" data-wow-delay="0.6s">
                 <i class="fas fa-bug"></i> รายงานข้อผิดผลาดได้โดยการเปิด
@@ -285,7 +356,7 @@
               >
                 <i class="fab fa-github"></i> TNI Cybersec
               </button>
-              <br>
+              <br />
             </div>
           </div>
         </div>
