--- a/aboutus.html
+++ b/aboutus.html
@@ -95,7 +95,10 @@
                 expand on new knowledge in the cybersec."
               </h5>
               <p class="wow fadeInUp" data-wow-delay="0.5s">
-                โดยเราจะมุ่งเน้นการค้นคว้าทดลองวิจัยภัยคุกความใหม่ๆเพื่อเท่าทันต่อความเสี่ยงที่จะเกิดจากโดนโจมตีหรือระบบรั่วไหลของข้อมูลที่จะเกิดขึ่นและเราจะมุ่งมั้นที่จะศึกษาเทคโนโลยีใหม่ๆในอนาคตอันใกล้ที่อาจจะมีความเสี่ยงทางไซเบอร์ที่จะเกิดขึ้นในอนาคต
+                โดยเราจะมุ่งเน้นการค้นคว้าทดลองวิจัยภัยคุกความใหม่ ๆ
+                เพื่อเท่าทันต่อความเสี่ยงที่จะเกิดจากโดนโจมตีหรือระบบรั่วไหลของข้อมูลที่จะเกิดขึ่น
+                และเราจะมุ่งมั้นที่จะศึกษาเทคโนโลยีใหม่ ๆ
+                ในอนาคตอันใกล้ที่อาจจะมีความเสี่ยงทางไซเบอร์ที่จะเกิดขึ้นในอนาคต
               </p>
 
               <div
@@ -193,9 +196,9 @@
               </h2>
               <p class="wow fadeInUp" data-wow-delay="0.5s">
                 เราเป็นชมรมทางด้าน Cyber Security & Technology
-                ซึ่งครอบคลุมทั้งในหลายด้านเช่น ความมั่นคงทางไซเบอร์,
-                ความปลอดภัยทางไซเบอร์,
-                ความน่าเชื่อถือของระบบหรือขบวนการต่างๆทางไซเบอร์และการวิจัยศึกษาคิดค้นการนำเครื่องมือทางด้านเทคโนโลยี
+                ซึ่งครอบคลุมทั้งในหลายด้าน เช่น ความมั่นคงทางไซเบอร์,
+                ความปลอดภัยทางไซเบอร์, ความน่าเชื่อถือของระบบหรือขบวนการต่าง ๆ
+                ทางไซเบอร์และการวิจัยศึกษาคิดค้นการนำเครื่องมือทางด้านเทคโนโลยี
                 ที่ร่วมมือกันหลายองค์กรโดย Thai-Nichi Institute of Technology
                 (TNI, 泰日工業大学) เป็นแกนนำหลัก
               </p>
@@ -204,7 +207,9 @@
                 <i class="fa-solid fa-handshake-angle"></i> Cooperative
               </h2>
               <p class="wow fadeInUp" data-wow-delay="0.5s">
-                บริษัทหน่วยงานองค์กรที่สมาชิกชมรมได้ไปทำปฏิบัติสหกิจศึกษาและฝึกงานได้นำความรู้ไปปรับใช้ประยุกต์ใช้กับงานจริง
+                บริษัท หน่วยงาน
+                และองค์กรที่สมาชิกชมรมได้ไปปฏิบัติสหกิจศึกษาหรือฝึกงาน
+                และนำความรู้ไปบูรณาการหรือประยุกต์ใช้กับงานจริง
               </p>
               <div
                 id="carouselcop"
@@ -288,7 +293,7 @@
                 <i class="fa-solid fa-leaf"></i> รักษ์โลก
               </h2>
               <p class="wow fadeInUp" data-wow-delay="0.6s">
-                เว็ปของทางเรานั้นเป็น Always Dark Mode ทำให้อุปกรณ์ที่ใช้หน้าจอ
+                เว็บของทางเรานั้นเป็น Always Dark Mode ทำให้อุปกรณ์ที่ใช้หน้าจอ
                 OLED หรือ Mini LED
                 สามารถลดการใช้พลังงานลงได้และประหยัดพลังงานได้มากขึ้น!
               </p>
@@ -304,11 +309,12 @@
                   height="35"
                   src="img/Open-source.png"
                 />
-                Open-source
+                Open Source
               </h2>
               <p class="wow fadeInUp" data-wow-delay="0.6s">
-                เว็ปของทางเรานั้นเป็น All open-source ท่านสามารถดู source code
-                ของเว็ปทั้งหมดได้ที่ <i class="fas fa-arrow-circle-down"></i>
+                เว็บของทางเรานั้นเป็น All Open Source
+                ท่านสามารถดูซอร์สโค้ดของเว็บทั้งหมดได้ที่
+                <i class="fas fa-arrow-circle-down"></i>
               </p>
               <button
                 type="button"
