Changes to be committed: 	modified:   404.html 	modified:   HPNY.html 	modified:   aboutus.html 	modified:   badapple.html 	modified:   common/footer.html 	modified:   stats.html

--- a/404.html
+++ b/404.html
@@ -63,7 +63,7 @@
       <nav>
         <span
           id="brand"
-          class="circleScaleBtn2 logo user-select-none"
+          class="circleScaleBtn2 logo user-select-none wow bounceIn" data-wow-delay="0.6s"
           onclick="location.href='index.html'"
         >
           <img
