--- a/common/footer.html
+++ b/common/footer.html
@@ -22,7 +22,7 @@
           <h5 class="wow fadeInUp footer" data-wow-delay="0.1s">
             <span
               id="brand"
-              class="logo wow fadeInDown data-wow-delay="0.6s"
+              class="logo"
             >
             <img
               rel="preload"
