--- a/HPNY.html
+++ b/HPNY.html
@@ -93,7 +93,7 @@
       <nav>
         <span
           id="brand"
-          class="circleScaleBtn2 logo user-select-none"
+          class="circleScaleBtn2 logo user-select-none wow bounceIn" data-wow-delay="0.6s"
           onclick="location.href='index.html'"
         >
           <img
