--- a/aboutus.html
+++ b/aboutus.html
@@ -81,10 +81,12 @@
                 <i class="fas fa-info-circle"></i> About Us
               </h1>
               <br />
-              <h2 class="wow fadeInUp user-select-none" data-wow-delay="0.4s">
+              <h2 class="wow fadeInUp" data-wow-delay="0.4s">
                 <img
+                  onclick="location.href='stats.html'"
                   rel="preload"
                   as="image"
+                  type="button"
                   width="auto"
                   height="55"
                   src="img/TNICyberWeb.png"
