--- a/stats.html
+++ b/stats.html
@@ -67,17 +67,44 @@
 
     <div class="wrapper">
       <!--------------- navbar starts here --------------->
-      <div id="navigation"></div>
+      <nav>
+        <span
+          id="brand"
+          class="circleScaleBtn2 logo user-select-none wow bounceIn" data-wow-delay="0.6s"
+          onclick="location.href='index.html'"
+        >
+          <img
+            rel="preload"
+            as="image"
+            width="auto"
+            height="55"
+            src="img/TNICyberWeb.png"
+          />
+        </span>
+      </nav>
       <!--------------- navbar ends here --------------->
-
+      <div class="snowflakes" aria-hidden="true">
+      <div class="snowflake">🛬</div>
+      <div class="snowflake">💻</div>
+      <div class="snowflake">💓</div>
+      <div class="snowflake">🛬</div>
+      <div class="snowflake">💻</div>
+      <div class="snowflake">💓</div>
+      <div class="snowflake">🛬</div>
+      <div class="snowflake">💻</div>
+      <div class="snowflake">💓</div>
+      <div class="snowflake">🛬</div>
+      <div class="snowflake">💻</div>
+      <div class="snowflake">💓</div>
+    </div>
       <!--------------- hero section starts here --------------->
-      <div rel="preload" as="image" class="bgimg wow fadeInUp black">
+      <div rel="preload" as="image" class="bgimg black wow bounceIn" data-wow-delay="0.1s">
         <div class="hero">
           <div class="header">
-            <div class="h3 text-center mb-3">Page Views</div>
-            <div id="visits" class="text-center"></div>
-            <div class="text-center mt-3">
-              Landing Hits: <span id="landing-hits"></span>
+            <div class="h1 text-center mb-3 wow bounceIn" data-wow-delay="0.2s">💻Page Views!</div>
+            <div id="visits" class="text-center wow bounceIn" data-wow-delay="0.3s"></div>
+            <div class="h3 text-center mt-3 wow bounceIn" data-wow-delay="0.4s">
+              🛬Landing <span id="landing-hits"></span> Hits
             </div>
           </div>
         </div>
@@ -86,11 +113,7 @@
     <!--------------- hero section ends here --------------->
 
     <!--------------- footer starts here --------------->
-    <div id="footer"></div>
     <!--------------- footer ends here --------------->
-
-    <br />
-
     <div id="cookie-banner"></div>
 
     <!-- jQuery -->
