Changes to be committed 	modified:   aboutus.html

--- a/aboutus.html
+++ b/aboutus.html
@@ -189,7 +189,9 @@
               <br />
               <h2 class="wow fadeInUp user-select-none" data-wow-delay="0.4s">
                 <img
+                  onclick="location.href='https://www.tni.ac.th/'"
                   rel="preload"
+                  type="button"
                   as="image"
                   width="auto"
                   height="55"
