--- a/aboutus.html
+++ b/aboutus.html
@@ -198,6 +198,9 @@
                   src="img/logoTNIWhite.png"
                 />
               </h2>
+              <h5 class="wow fadeInUp" data-wow-delay="0.5s">
+                "เราไม่ได้เอาแต่ Hack อย่างเดียวแต่เรายังทำอย่างอื่นอีกหลายๆอย่างอีกด้วย"
+              </h5>
               <p class="wow fadeInUp" data-wow-delay="0.5s">
                 เราเป็นชมรมทางด้าน Cyber Security & Technology
                 ซึ่งครอบคลุมทั้งในหลายด้าน เช่น ความมั่นคงทางไซเบอร์,
@@ -206,7 +209,16 @@
                 ที่ร่วมมือกันหลายองค์กรโดย Thai-Nichi Institute of Technology
                 (TNI, 泰日工業大学) เป็นแกนนำหลัก
               </p>
-              <br />
+              <button
+                onclick="location.href='https://www.tni.ac.th'"
+                type="button"
+                class="btn btn-outline-light btn-block btn-lg wow fadeInUp"
+                data-wow-delay="0.6s"
+              >
+              <i class="fa-solid fa-arrow-up-right-from-square"></i> TNI Website!
+              </button>
+              <br>
+              </br>
               <h2 class="wow fadeInUp" data-wow-delay="0.4s">
                 <i class="fa-solid fa-handshake-angle"></i> Cooperative
               </h2>
@@ -288,7 +300,7 @@
               >
                 <i class="fas fa-handshake"></i> Join us!
               </button>
-              <br />
+            <br>
             </div>
 
             <div class="col-lg-12">
@@ -328,7 +340,7 @@
               >
                 <i class="fab fa-github"></i> TNI Cybersec
               </button>
-              <br />
+              <br>
             </div>
 
             <div class="col-lg-12">
@@ -348,7 +360,7 @@
               >
                 <i class="fa-brands fa-hotjar"></i> New Feature!
               </button>
-              <br />
+              <br>
 
               <p class="wow fadeInUp" data-wow-delay="0.6s">
                 <i class="fas fa-bug"></i> รายงานข้อผิดผลาดได้โดยการเปิด
@@ -366,7 +378,7 @@
               >
                 <i class="fab fa-github"></i> TNI Cybersec
               </button>
-              <br />
+              <br>
             </div>
           </div>
         </div>
