--- a/aboutus.html
+++ b/aboutus.html
@@ -189,7 +189,7 @@
               <br />
               <h2 class="wow fadeInUp user-select-none" data-wow-delay="0.4s">
                 <img
-                  onclick="location.href='https://www.tni.ac.th/'"
+                  onclick="window.open('https://www.tni.ac.th')"
                   rel="preload"
                   type="button"
                   as="image"
@@ -210,7 +210,7 @@
                 (TNI, 泰日工業大学) เป็นแกนนำหลัก
               </p>
               <button
-                onclick="location.href='https://www.tni.ac.th'"
+                onclick="window.open('https://www.tni.ac.th')"
                 type="button"
                 class="btn btn-outline-light btn-block btn-lg wow fadeInUp"
                 data-wow-delay="0.6s"
