Changes to be committed: 	modified:   stats.html

--- a/stats.html
+++ b/stats.html
@@ -86,19 +86,19 @@
       <div class="snowflakes" aria-hidden="true">
       <div class="snowflake">🛬</div>
       <div class="snowflake">💻</div>
-      <div class="snowflake">💓</div>
+      <div class="snowflake">👨‍💻</div>
       <div class="snowflake">🛬</div>
       <div class="snowflake">💻</div>
-      <div class="snowflake">💓</div>
+      <div class="snowflake">👨‍💻</div>
       <div class="snowflake">🛬</div>
       <div class="snowflake">💻</div>
-      <div class="snowflake">💓</div>
+      <div class="snowflake">👨‍💻</div>
       <div class="snowflake">🛬</div>
       <div class="snowflake">💻</div>
-      <div class="snowflake">💓</div>
+      <div class="snowflake">👨‍💻</div>
     </div>
       <!--------------- hero section starts here --------------->
-      <div rel="preload" as="image" class="bgimg black wow bounceIn" data-wow-delay="0.1s">
+      <div rel="preload" as="image" class="bgimg black wow bounceIn user-select-none" data-wow-delay="0.1s">
         <div class="hero">
           <div class="header">
             <div class="h1 text-center mb-3 wow bounceIn" data-wow-delay="0.2s">💻Page Views!</div>
