Changes to be committed: 	modified:   stats.html

--- a/stats.html
+++ b/stats.html
@@ -104,7 +104,7 @@
             <div class="h1 text-center mb-3 wow bounceIn" data-wow-delay="0.2s">💻Page Views!</div>
             <div id="visits" class="text-center wow bounceIn" data-wow-delay="0.3s"></div>
             <div class="h3 text-center mt-3 wow bounceIn" data-wow-delay="0.4s">
-              🛬Landing <span id="landing-hits"></span> Hits
+              🛬Landing <span id="landing-hits"></span> Hits!
             </div>
           </div>
         </div>
