--- a/aboutus.html
+++ b/aboutus.html
@@ -200,7 +200,7 @@
               </h2>
               <h5 class="wow fadeInUp" data-wow-delay="0.5s">
                 "เราไม่ได้เอาแต่ Hack อย่างเดียวแต่เรายังทำอย่างอื่นอีกหลายๆอย่างอีกด้วย"
-                "เราแข่งข้นเป็นงานอดิเรก แต่เราวิจัย"
+                "เราแข่งข้นเป็นงานอดิเรก แต่เราวิจัยค้นคว้า"
               </h5>
               <p class="wow fadeInUp" data-wow-delay="0.5s">
                 เราเป็นชมรมทางด้าน Cyber Security & Technology
