--- a/aboutus.html
+++ b/aboutus.html
@@ -199,7 +199,7 @@
                 />
               </h2>
               <h5 class="wow fadeInUp" data-wow-delay="0.5s">
-                "เราไม่ได้เอาแต่ Hack อย่างเดียวแต่เรายังทำอย่างอื่นอีกหลายๆอย่างอีกด้วย"
+                "เราไม่ได้เอาแต่ Hack อย่างเดียวแต่เรายังทำอย่างอื่นอีกหลายๆอย่างอีกด้วย"<br>
                 "เราแข่งข้นเป็นงานอดิเรก แต่เราวิจัยค้นคว้าคิดค้นสิ่งต่างๆเป็นงานหลัก"
               </h5>
               <p class="wow fadeInUp" data-wow-delay="0.5s">
