Changes to be committed: 	modified:   aboutus.html

--- a/aboutus.html
+++ b/aboutus.html
@@ -99,8 +99,7 @@
               <p class="wow fadeInUp" data-wow-delay="0.5s">
                 โดยเราจะมุ่งเน้นการค้นคว้าทดลองวิจัยภัยคุกความใหม่ๆ 
                 เพื่อเท่าทันต่อความเสี่ยงที่จะเกิดจากโดนโจมตีหรือระบบรั่วไหลของข้อมูลที่จะเกิดขึ่น
-                และเราจะมุ่งมั้นที่จะศึกษาเทคโนโลยีใหม่ ๆ
-                ในอนาคตอันใกล้ที่อาจจะมีความเสี่ยงทางไซเบอร์ที่จะเกิดขึ้นในอนาคต
+                และเราจะมุ่งมั้นที่จะศึกษาเทคโนโลยีใหม่ๆ ในอนาคตอันใกล้ที่อาจจะมีความเสี่ยงทางไซเบอร์ที่จะเกิดขึ้นในอนาคต
               </p>
 
               <div
