--- a/aboutus.html
+++ b/aboutus.html
@@ -97,8 +97,7 @@
                 expand on new knowledge in the cybersec."
               </h5>
               <p class="wow fadeInUp" data-wow-delay="0.5s">
-                โดยเราจะมุ่งเน้นการค้นคว้าทดลองวิจัยภัยคุกความใหม่ๆ 
-                เพื่อเท่าทันต่อความเสี่ยงที่จะเกิดจากโดนโจมตีหรือระบบรั่วไหลของข้อมูลที่จะเกิดขึ่น
+                โดยเราจะมุ่งเน้นการค้นคว้าทดลองวิจัยภัยคุกความใหม่ๆเพื่อเท่าทันต่อความเสี่ยงที่จะเกิดจากโดนโจมตีหรือระบบรั่วไหลของข้อมูลที่จะเกิดขึ่น
                 และเราจะมุ่งมั้นที่จะศึกษาเทคโนโลยีใหม่ๆในอนาคตอันใกล้ที่อาจจะมีความเสี่ยงทางไซเบอร์ที่จะเกิดขึ้นในอนาคต
               </p>
 
