Changes to be committed: 	modified:   aboutus.html

--- a/aboutus.html
+++ b/aboutus.html
@@ -203,8 +203,8 @@
               <p class="wow fadeInUp" data-wow-delay="0.5s">
                 เราเป็นชมรมทางด้าน Cyber Security & Technology
                 ซึ่งครอบคลุมทั้งในหลายด้าน เช่น ความมั่นคงทางไซเบอร์,
-                ความปลอดภัยทางไซเบอร์, ความน่าเชื่อถือของระบบหรือขบวนการต่างๆ
-                ทางไซเบอร์ และการวิจัยศึกษาคิดค้นการนำเครื่องมือทางด้านเทคโนโลยี
+                ความปลอดภัยทางไซเบอร์, ความน่าเชื่อถือของระบบหรือขบวนการต่างๆทางไซเบอร์ 
+                และการวิจัยศึกษาคิดค้นการนำเครื่องมือทางด้านเทคโนโลยี
                 ที่ร่วมมือกันหลายองค์กรโดย Thai-Nichi Institute of Technology
                 (TNI, 泰日工業大学) เป็นแกนนำหลัก
               </p>
