Format with Prettier

--- a/stats.html
+++ b/stats.html
@@ -70,7 +70,8 @@
       <nav>
         <span
           id="brand"
-          class="circleScaleBtn2 logo user-select-none wow bounceIn" data-wow-delay="0.6s"
+          class="circleScaleBtn2 logo user-select-none wow bounceIn"
+          data-wow-delay="0.6s"
           onclick="location.href='index.html'"
         >
           <img
@@ -84,25 +85,36 @@
       </nav>
       <!--------------- navbar ends here --------------->
       <div class="snowflakes" aria-hidden="true">
-      <div class="snowflake">🛬</div>
-      <div class="snowflake">💻</div>
-      <div class="snowflake">👨‍💻</div>
-      <div class="snowflake">🛬</div>
-      <div class="snowflake">💻</div>
-      <div class="snowflake">👨‍💻</div>
-      <div class="snowflake">🛬</div>
-      <div class="snowflake">💻</div>
-      <div class="snowflake">👨‍💻</div>
-      <div class="snowflake">🛬</div>
-      <div class="snowflake">💻</div>
-      <div class="snowflake">👨‍💻</div>
-    </div>
+        <div class="snowflake">🛬</div>
+        <div class="snowflake">💻</div>
+        <div class="snowflake">👨‍💻</div>
+        <div class="snowflake">🛬</div>
+        <div class="snowflake">💻</div>
+        <div class="snowflake">👨‍💻</div>
+        <div class="snowflake">🛬</div>
+        <div class="snowflake">💻</div>
+        <div class="snowflake">👨‍💻</div>
+        <div class="snowflake">🛬</div>
+        <div class="snowflake">💻</div>
+        <div class="snowflake">👨‍💻</div>
+      </div>
       <!--------------- hero section starts here --------------->
-      <div rel="preload" as="image" class="bgimg black wow bounceIn user-select-none" data-wow-delay="0.1s">
+      <div
+        rel="preload"
+        as="image"
+        class="bgimg black wow bounceIn user-select-none"
+        data-wow-delay="0.1s"
+      >
         <div class="hero">
           <div class="header">
-            <div class="h1 text-center mb-3 wow bounceIn" data-wow-delay="0.2s">💻Page Views!</div>
-            <div id="visits" class="text-center wow bounceIn" data-wow-delay="0.3s"></div>
+            <div class="h1 text-center mb-3 wow bounceIn" data-wow-delay="0.2s">
+              💻Page Views!
+            </div>
+            <div
+              id="visits"
+              class="text-center wow bounceIn"
+              data-wow-delay="0.3s"
+            ></div>
             <div class="h3 text-center mt-3 wow bounceIn" data-wow-delay="0.4s">
               🛬Landing <span id="landing-hits">...</span> Hits!
             </div>
