--- a/404.html
+++ b/404.html
@@ -63,7 +63,8 @@
       <nav>
         <span
           id="brand"
-          class="circleScaleBtn2 logo user-select-none wow bounceIn" data-wow-delay="0.6s"
+          class="circleScaleBtn2 logo user-select-none wow bounceIn"
+          data-wow-delay="0.6s"
           onclick="location.href='index.html'"
         >
           <img
