--- a/aboutus.html
+++ b/aboutus.html
@@ -197,13 +197,16 @@
                 />
               </h2>
               <h5 class="wow fadeInUp" data-wow-delay="0.5s">
-                "เราไม่ได้เอาแต่ Hack อย่างเดียวแต่เรายังทำอย่างอื่นอีกหลายๆอย่างอีกด้วย"<br>
-                "เราแข่งขันเป็นงานอดิเรก แต่เราวิจัยค้นคว้าคิดค้นสิ่งต่างๆที่เกี่ยวข้องเป็นงานหลัก"
+                "เราไม่ได้เอาแต่ Hack
+                อย่างเดียวแต่เรายังทำอย่างอื่นอีกหลายๆอย่างอีกด้วย"<br />
+                "เราแข่งขันเป็นงานอดิเรก
+                แต่เราวิจัยค้นคว้าคิดค้นสิ่งต่างๆที่เกี่ยวข้องเป็นงานหลัก"
               </h5>
               <p class="wow fadeInUp" data-wow-delay="0.5s">
                 เราเป็นชมรมทางด้าน Cyber Security & Technology
                 ซึ่งครอบคลุมทั้งในหลายด้าน เช่น ความมั่นคงทางไซเบอร์,
-                ความปลอดภัยทางไซเบอร์, ความน่าเชื่อถือของระบบหรือขบวนการต่างๆทางไซเบอร์ 
+                ความปลอดภัยทางไซเบอร์,
+                ความน่าเชื่อถือของระบบหรือขบวนการต่างๆทางไซเบอร์
                 และการวิจัยศึกษาคิดค้นการนำเครื่องมือทางด้านเทคโนโลยี
                 ที่ร่วมมือกันหลายองค์กรโดย Thai-Nichi Institute of Technology
                 (TNI, 泰日工業大学) เป็นแกนนำหลัก
@@ -214,10 +217,12 @@
                 class="btn btn-outline-light btn-block btn-lg wow fadeInUp"
                 data-wow-delay="0.6s"
               >
-              <i class="fa-solid fa-arrow-up-right-from-square"></i> TNI Website!
+                <i class="fa-solid fa-arrow-up-right-from-square"></i> TNI
+                Website!
               </button>
-              <br>
-              </br>
+
+              <br />
+
               <h2 class="wow fadeInUp" data-wow-delay="0.4s">
                 <i class="fa-solid fa-handshake-angle"></i> Cooperative
               </h2>
@@ -299,7 +304,7 @@
               >
                 <i class="fas fa-handshake"></i> Join us!
               </button>
-            <br>
+              <br />
             </div>
 
             <div class="col-lg-12">
@@ -339,7 +344,7 @@
               >
                 <i class="fab fa-github"></i> TNI Cybersec
               </button>
-              <br>
+              <br />
             </div>
 
             <div class="col-lg-12">
@@ -359,7 +364,7 @@
               >
                 <i class="fa-brands fa-hotjar"></i> New Feature!
               </button>
-              <br>
+              <br />
 
               <p class="wow fadeInUp" data-wow-delay="0.6s">
                 <i class="fas fa-bug"></i> รายงานข้อผิดผลาดได้โดยการเปิด
@@ -377,7 +382,7 @@
               >
                 <i class="fab fa-github"></i> TNI Cybersec
               </button>
-              <br>
+              <br />
             </div>
           </div>
         </div>
